--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   font-family: var(--main-font);
   background-color: var(--main-background-color);
 }
+
 section {
   padding: 100px 50px 100px 50px;
   margin: 0 auto;
@@ -105,17 +106,27 @@ header h3 {
 .recipe .video {
   display: block;
   margin: 0 auto;
+  width: 100%;
   box-shadow: var(--box-shadow);
 }
 
+.contact-body {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url(images/contact-image.jpeg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 .contact {
   margin-top: 50px;
+  color: #fff;
 }
 .contact h1 {
   text-align: center;
+  font-size: 55px;
 }
 .contact .icon {
-  color: #64462e;
+  color: #fff;
   margin-top: 20px;
   margin-bottom: 20px;
   font-size: 24px;
@@ -195,5 +206,13 @@ footer .icons:hover {
   }
   .recipe .video {
     width: 100%;
+  }
+  .contact-body {
+    background-size: 200%;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .contact h1 {
+    font-size: 27px;
   }
 }
